--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ input[type=tel]:disabled,
 select:disabled
  {
 	background: #dddddd;
-	color: rgba(0,0,0,0.6);
+	color: rgba(0,0,0,0.7);
 }
 
 input.wp_information_input {
@@ -25,4 +25,18 @@ div.boite {
 
 table tr{
 	padding: 5px;
+}
+
+span#footer-thankyou,
+p#footer-upgrade {
+	display: none;
+}
+
+footer.wp_footer {
+	bottom:0;
+	position: absolute;
+	left: 0;
+	display: flex;
+	justify-content: space-between;
+	width: 95%;
 }
